--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # libminer
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/awesomecosmos/libminer/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/awesomecosmos/libminer/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of libminer is to provide utility functions for inspecting and examining your local R package installations.
